[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "syk_simulation"
version = "0.1.0"
description = "Using Trotterization, QDrift, and Qubitization in simulating SYK model."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Brian Goldsmith, Larissa Kroell, Nishna Aerabati"}]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]

# https://peps.python.org/pep-0508/
dependencies = [
    "numpy",
    "scipy",
    "pyqsp", 
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit>=3.0.0",
    "black>=23.7.0"
]

[tool.setuptools]
packages = ["syk-simulation"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120